--- a/FRONT/impartidas.html
+++ b/FRONT/impartidas.html
@@ -17,7 +17,7 @@
                 <div class= "shadow-sm p-3 mb-5 bg-body rounded" id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id">
-                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getAvg()">Mostrar</button>
+                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getAvg()">Nota media</button>
                 </div>
             </form>
         </section>
@@ -40,7 +40,7 @@
                 <div class= "shadow-sm p-3 mb-5 bg-body rounded" id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id2">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id2">
-                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getApuntadas()">Mostrar</button>
+                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getApuntadas()">Apuntadas</button>
                 </div>
             </form>
         </section>
@@ -63,7 +63,7 @@
                 <div class= "shadow-sm p-3 mb-5 bg-body rounded" id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id3">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id3">
-                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getImpartidas()">Mostrar</button>
+                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getImpartidas()">Impartidas</button>
                 </div>
             </form>
         </section>
