--- a/FRONT/alumnos.html
+++ b/FRONT/alumnos.html
@@ -5,15 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alumnos</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="prueba.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <body>
-    <main>
-        <section id = "todo">
-            <form>
-                <div class= "shadow-sm p-3 mb-5 bg-body rounded" id="datos">
+    <main class="grid_principal">
+        <header class="app_bar display_row_center">
+            <h1>Información Alumnos</h1>
+        </header>
+        <aside class="aside">
+            <nav class="nav">
+                <li id="n1"><a href="#"><img src="../assests/user (2).png"></a></li>
+                <li id="n2"><a href="notas.html"><img src="../assests/test.png"></a></li>
+                <li id="n3"><a href="impartidas.html"><img src="../assests/training.png"></a></li>
+            </nav>
+        </aside>
+        <section class="grid_secundario" id = "todo">
+            <article class="grid_top_left box_center_rounded">
+                <div class="info box_center_rounded">
+                    <h4>Leyenda: </h4>
+                    <ul class="bullet_list">
+                        <li><span>Nombre: </span>nombre del alumno</li>
+                        <li><span>Apellidos: </span>apellidos del alumno</li>
+                        <li><span>Año de entrada: </span>año de entrada al curso</li>
+                        <li><span>Id: </span>id de alumno en la BBDD</li>
+                    </ul>
+                </div>
+                <div class ="info box_center_rounded">
+                    <h4>Botones: </h4>
+                    <ul class="bullet_list">
+                        <li><span>Mostrar: </span>Muestra la lista de alumnos, en caso de poner id muestra el alumno con dicho id</li>
+                        <li><span>Crear: </span>Crea un alumno con los campos rellenos, excepto el id</li>
+                        <li><span>Actualizar: </span>Identificar id, se modifica la información del alumno (id)</li>
+                        <li><span>Eliminar: </span>Poniendo el id, se elimina la información del alumno (id)</li>
+                    </ul>
+                </div>
+            </article>
+            <form class="grid_top_rigth box_center_rounded display_column_space">
+                <div class= "display_row_center box_center_rounded fixed" id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="nombre">Nombre: </label>
                     <input  class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="nombre">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="apellidos">Apellidos: </label>
@@ -23,27 +55,25 @@
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="id">Id: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="id">
                 </div>
-                <div id ="botones">
-                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getStudent()">Mostrar</button>
-                    <button  class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="postStudent()">Crear</button>
-                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="putStudent()">Actualizar</button>
-                    <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="deleteStudent()">Eliminar</button>
+                <div class ="display_row_space fixed">
+                    <button class="shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getStudent()">Mostrar</button>
+                    <button class="shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="postStudent()">Crear</button>
+                    <button class="shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="putStudent()">Actualizar</button>
+                    <button class="shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="deleteStudent()">Eliminar</button>
                 </div>
             </form>
-        </section>
-        <section>
-            <table class="table table-dark table-striped" id="tabla">
-                <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Información sobre alumnos</h1>
-                <thead>
-                  <tr>
-                    <th scope="col">id</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellidos</th>
-                    <th scope="col">Año de entrada</th>
-                  </tr>
-                </thead>
-              </table>
-              <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo()">Eliminar Información</button>
+            <article class= "grid_low box_center_rounded">
+                <table class="table table-dark table-striped box_center_rounded" id="tabla">                    <thead>
+                      <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Apellidos</th>
+                        <th scope="col">Año de entrada</th>
+                      </tr>
+                    </thead>
+                </table>
+                <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo()">Eliminar Información</button>
+            </article>
         </section>
     </main>
     <script src="controladorAPI.js"></script>
