--- a/FRONT/impartidas.html
+++ b/FRONT/impartidas.html
@@ -5,81 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impartidas</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="prueba.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <body>
-    <main>
-        <section id = "todo">
-            <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Notas media por alumno</h1>
+    <main class="grid_principal">
+      <header class="app_bar display_row_center">
+        <h1>Información Impartidas</h1>
+      </header>
+      <aside class="aside">
+          <nav class="nav">
+              <li id="n1"><a href="alumnos.html"><img src="../assests/user (2).png"></a></li>
+              <li id="n2"><a href="notas.html"><img src="../assests/test.png"></a></li>
+              <li id="n3"><a href="#"><img src="../assests/training.png"></a></li>
+          </nav>
+      </aside>
+      <section class="grid_secundario" id = "todo">
+        <article class="grid_top_left box_center_rounded">
+          <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Notas media por alumno</h1>
             <form>
-                <div class= "shadow-sm p-3 mb-5 bg-body rounded" id="datos">
+              <div id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id">
                     <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getAvg()">Nota media</button>
                 </div>
             </form>
-        </section>
-        <section>
             <table class="table table-dark table-striped" id="tabla">
-                <thead>
-                  <tr>
-                    <th scope="col">id estudiante</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellidos</th>
-                    <th scope="col">Nota media</th>
-                  </tr>
-                </thead>
-              </table>
-              <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo()">Eliminar Información</button>
-        </section>
-        <section id = "todo2">
+              <thead>
+                <tr>
+                  <th scope="col">id estudiante</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Apellidos</th>
+                  <th scope="col">Nota media</th>
+                </tr>
+              </thead>
+            </table>
+            <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo()">Eliminar Información</button>
+        </article>
+        <article class="grid_top_rigth box_center_rounded" id = "todo2">
             <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Asignaturas por alumno</h1>
             <form>
-                <div class= "shadow-sm p-3 mb-5 bg-body rounded" id="datos">
+              <div id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id2">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id2">
                     <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getApuntadas()">Apuntadas</button>
                 </div>
             </form>
-        </section>
-        <section>
             <table class="table table-dark table-striped" id="tabla2">
-                <thead>
-                  <tr>
-                    <th scope="col">id estudiante</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellidos</th>
-                    <th scope="col">Asignatura</th>
-                  </tr>
-                </thead>
-              </table>
-              <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo2()">Eliminar Información</button>
-        </section>
-        <section id = "todo3">
+              <thead>
+                <tr>
+                  <th scope="col">id estudiante</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Apellidos</th>
+                  <th scope="col">Asignatura</th>
+                </tr>
+              </thead>
+            </table>
+            <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo2()">Eliminar Información</button>
+        </article>
+        <article class= "grid_low box_center_rounded" id = "todo3">
             <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Profesor por asignatura</h1>
             <form>
-                <div class= "shadow-sm p-3 mb-5 bg-body rounded" id="datos">
+                <div id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id3">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id3">
                     <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getImpartidas()">Impartidas</button>
                 </div>
             </form>
-        </section>
-        <section>
             <table class="table table-dark table-striped" id="tabla3">
-                <thead>
-                  <tr>
-                    <th scope="col">id profesor</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellidos</th>
-                    <th scope="col">Asignatura</th>
-                  </tr>
-                </thead>
-              </table>
-              <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo3()">Eliminar Información</button>
-        </section>
+              <thead>
+                <tr>
+                  <th scope="col">id profesor</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Apellidos</th>
+                  <th scope="col">Asignatura</th>
+                </tr>
+              </thead>
+            </table>
+            <button class= "shadow-lg p-3 mb-5 bg-body rounded" type ="button" onclick="eliminarInfo3()">Eliminar Información</button>
+        </article>            
     </main>
     <script src="controladorAPI.js"></script>
 </body>
