--- a/FRONT/alumnos.html
+++ b/FRONT/alumnos.html
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
             </article>
-            <form class="grid_top_rigth box_center_rounded display_column_space">
+            <form class="grid_top_rigth box_center_rounded display_column_space" id="prueba">
                 <div class= "display_row_center box_center_rounded fixed" id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="nombre">Nombre: </label>
                     <input  class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="nombre">
