--- a/FRONT/impartidas.html
+++ b/FRONT/impartidas.html
@@ -26,7 +26,7 @@
       <section class="grid_secundario" id = "todo">
         <article class="grid_top_left box_center_rounded">
           <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Notas media por alumno</h1>
-            <form>
+            <form class="box_center_rounded">
               <div id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id">
@@ -47,7 +47,7 @@
         </article>
         <article class="grid_top_rigth box_center_rounded" id = "todo2">
             <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Asignaturas por alumno</h1>
-            <form>
+            <form class="box_center_rounded">
               <div id="datos">
                     <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id2">Id de estudiante: </label>
                     <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id2">
@@ -68,10 +68,10 @@
         </article>
         <article class= "grid_low box_center_rounded" id = "todo3">
             <h1 class= "shadow-lg p-3 mb-5 bg-body rounded">Profesor por asignatura</h1>
-            <form>
+            <form class="box_center_rounded">
                 <div id="datos">
-                    <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="student_id3">Id de estudiante: </label>
-                    <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="student_id3">
+                    <label class= "shadow-lg p-3 mb-5 bg-body rounded" for="teacher_id">Id profesor: </label>
+                    <input class= "shadow-lg p-3 mb-5 bg-body rounded" type="text" id="teacher_id">
                     <button class= "shadow-lg p-3 mb-5 bg-body rounded" type="button" onclick="getImpartidas()">Impartidas</button>
                 </div>
             </form>
